# brainiac

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  MANIFEST.in  Makefile  README.md  SECURITY.md  install.ps1  install.sh  manifest.json  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/hooks/: block-vault-recursive-scan.py  session-start.sh
.codex/: config.toml  hooks.json
.codex/hooks/: pre-compact.sh
.github/: dependabot.yml
.github/workflows/: codeql.yml  dependency-review.yml  distribution-matrix.yml  skill-mirror-sync.yml  supply-chain.yml
docs/: README.md  SECURITY_NOTES.md  architecture-overview.html  benchmark-results.md  classification-scheme.md  clean-room-log.md  corpus-migration.md  cos-ops.md  cowork-windows-install.md  dependency-inventory.md  deployment-authorization-memo.html  glossary.md  harness-allowlist.json  harness-wiring.md  ingestion.md  install-guide.html  managed-deployment-runbook.html  okf-lint-profile.md  release-runbook.md  s02-effort-reestimate.md  security-overview.html  session-memory.md  soak-runbook.md  sqlite-vec-spike.md  substrate-spec.md
docs/adr/: 0001-publish-via-clean-room-export.md  0002-cowork-plugin-skill-delivery.md  0003-parity-architecture.md  0004-versioning-release.md  0005-update-versioning-ux.md  0006-distribution-naming.md  0007-resumable-rebuild-staging-artifact.md
docs/install/: LLM-INSTALL.md  README.md  ai-install.md  claude-code.md  codex.md  cowork-session-prompt.md  cowork.md  new-owner.md  plugin-distribution.md  second-vault.md
docs/operations/: approval-evidence-pack.md  asr-cfa-design-rules.md  at-rest-posture.md  cowork-task-registrar-prompt.md  cutover-command-map.md  cutover-retirement-and-dualrun.md  cutover-scheduled-tasks.md  deployment-guide.md  egress-provider-posture.md  external-prework-register.md  macos-build-notarization-runbook.md  nist-csf-2.0-profile.md  owner-drain-runbook.md  packaging-windows-runbook.md  raci-ownership-support.md  s02-evidence.md  s03-evidence.md  s04-evidence.md  s05-evidence.md  s06-evidence.md  s07-evidence.md  s08-evidence.md  s09-evidence.md  s10-agentic-retrieval-analysis.md  s10-eval-verdict.md  s10-evidence.md  s10-positioning-and-roadmap.md  s10-pt-rootcause-and-fix.md  s11-model-of-record.md  wd01-deferred-cloud-leg.md  wd01-offhost-watchdog-spec.md
eval/: FOLLOWUPS.md  _s11b_ragas_heldout_scope.py  agentic_eval.py  aggregate_answer_grounded.py  bench_eg_bucketed.py  bench_embeddinggemma.py  bench_gte_reranker.py  bench_qwen_speed.py  benchmark_public.py  bge_m3_ab.py  bge_m3_embedder.py  bge_m3_encode_scope.py  bge_m3_scope_corpus.py  bge_m3_speed_bench.py  build_anchor_snippets.py  build_answer_contexts.py  build_golden_set.py  build_judge_inputs.py  build_live_golden_set.py  build_pt_candidates.py  build_pt_golden_set.py  build_qrels_console_v2.py  capture_brain_run.py  capture_pt_brain_run.py  capture_pt_graph_ab.py  capture_run.py  capture_sc_baseline.py  codex_judge.py  combine_codex_rounds.py  cv_zone_weight.py  dump_compact_snippets.py  emit_pt_manifest.py  final_eval_s11.py  gate.py  gate_gte_vs_jina.sh  gate_s11.py  harness.py  harness_direct.py  int8_ab.py  int8_ab_scoped.py  (+20 more)
overlay/: README.md
packaging/: README.md  brain_entry.py  dependency-manifest.json  s12-dependency-manifest.json  s12-sbom.cdx.json  sbom.cdx.json  stage_model.py
packaging/linux/: Dockerfile.build  brain-linux.spec  build_linux.sh
packaging/macos/: brain-macos.spec  build_macos.sh  entitlements.plist  sign_notarize_macos.sh
packaging/mcpb/: .mcpbignore  build.sh  manifest.json  smoke_handshake.py
packaging/windows/: brain-windows.spec  build_windows.ps1  sign_windows.ps1  version_info.txt  wdac-managed-installer-policy.md
routines/: manifest.json
scripts/: brain-brief-mac.plist  brain-brief.sh  brain-digest.sh  brain-retrieval-watch.sh  brain-synthesis-mac.plist  brain-synthesis.sh  com.brainiac.retrievalwatch.plist  eval-s13-launch.sh  eval-s13-monitor.sh  eval-vault-reconcile.py  install-brief-mac.sh  install-brief-windows.ps1  offhost_watchdog_check.py  register_tasks.py
scripts/ci/: eval_gate.sh
src/brain/: __init__.py  __main__.py  _version.py  anchor.py  audit.py  autolink.py  backup.py  brief.py  capture.py  chunk.py  classification.py  cli.py  config.py  connect.py  context.py  conventions.py  core.py  cos.py  cos_chips.py  dbretry.py  doctor.py  egress.py  embed.py  encryption.py  frontmatter.py  golden_probe.py  graph.py  graphify.py  graphreport.py  healthreport.py  inbox.py  index.py  init.py  lock.py  maintenance.py  mcp_adapter.py  multihop.py  notes.py  overlay.py  progress.py  (+7 more)
templates/: company.md  daily.md  meeting.md  person.md  project.md  state-moc.md
tests/: conftest.py  test_anchor.py  test_audit_chain.py  test_backup_restore.py  test_bitemporal.py  test_brief_digest.py  test_capture_path.py  test_classification_filter.py  test_cleanroom_export_smoke.py  test_cli_contract.py  test_cowork_restage.py  test_direct_file_read.py  test_doctor.py  test_egress_hint.py  test_egress_per_subcommand.py  test_embed.py  test_encryption_module.py  test_eval_harness.py  test_eval_stats.py  test_export_cleanroom.py  test_framework_sync.py  test_graphify.py  test_harness_allowlist.py  test_index.py  test_indexing.py  test_ingest.py  test_ingest_aux.py  test_ingest_transcript.py  test_init_full.py  test_integration.py  test_maintenance.py  test_mcp_config.py  test_migration_verification.py  test_multihop_graph.py  test_nightly_label.py  test_overlay.py  test_publish_release.py  test_release.py  test_retrieval.py  test_s03_indexing.py  (+12 more)
tools/: apply_live_migration.py  brain_daily.py  build_brain_binary.sh  code_origin_audit.py  cos_canary_install.sh  cowork_session_bootstrap.sh  cowork_workspace_install.sh  export_cleanroom.py  fn_sweep.py  framework_sync.py  generate_sbom.py  hash_source_vault.py  migrate_corpus.py  package_clients.py  probe_xlingual.py  publish_release.py  release.py  s12_generate_sbom.py  validate.py  vendor_semantic_deps.py  workspace_registry.py
(+189 files in other folders)
